# gurobi_example_setup

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
gurobi_example/: dataset.py  features.py  plots.py
gurobi_example/modeling/: predict.py  train.py
notebooks/: 0.03-hks-energy_storage_ML.ipynb  0.03-hks-predict_bike_flow.ipynb  0.04-hks-bike_rebalancing_complete.ipynb  0.04-hks-utilizing_renewables_and_energy_storage_to_minimize_electricity_use.ipynb  0.04-hks-widget-example.ipynb  Completed modeling1.ipynb
reports/: report.aux  report.fdb_latexmk  report.fls  report.tex
