[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gurobi_example"
version = "0.0.1"
description = "Example setup of Gurobi for exploration and exexperimentation with the library."
authors = [
  { name = "Herman Solem" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["gurobi_example"]
force_sort_within_sections = true
